start on a practice facility and add an icon